proxy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - env:
            - name: PROXYURL
              value: http://webserver
          image: index.docker.io/fwardzic/simpleproxy:latest
          imagePullPolicy: IfNotPresent
          name: proxy
          ports:
            - containerPort: 3030
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: 25m
            requests:
              cpu: 25m
