webserver_v1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver
    version: v1
  name: webserverv1
spec:
  progressDeadlineSeconds: 600
  replicas: 10
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webserver
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webserver
        version: v1
    spec:
      affinity: {}
      containers:
        - env:
            - name: SERVERCONTNET
              value: WebServer V1
          image: index.docker.io/fwardzic/simpleserver:v1.0.0
          imagePullPolicy: IfNotPresent
          name: simpleserver
          ports:
            - containerPort: 3030
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: 25m
            requests:
              cpu: 25m
