webserver_v2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver
    version: v2
  name: webserverv2
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  selector:
    matchLabels:
      app: webserver
      version: v2
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webserver
        version: v2
    spec:
      affinity: {}
      containers:
        - env:
            - name: SERVERCONTNET
              value: WebServer V2
          image: index.docker.io/mcasperson/simpleserver:0.1.12
          imagePullPolicy: IfNotPresent
          name: simpleserver
          ports:
            - containerPort: 3030
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: 25m
            requests:
              cpu: 25m
