proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 3030
  selector:
    app: proxy
  type: NodePort
