webserver_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserverv1
spec:
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 3030
  selector:
    app: webserver
    version: v1
  type: ClusterIP
