webserver_v2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserverv2
spec:
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 3030
  selector:
    app: webserver
    version: v2
